--- a/build.gradle
+++ b/build.gradle
@@ -29,8 +29,10 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-thymeleaf')
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.springframework.session:spring-session-core')
+    compile('mysql:mysql-connector-java')
+    compile('javax.xml.bind:jaxb-api:2.2.11')
+    compile('com.sun.xml.bind:jaxb-core:2.2.11')
+    compile('com.sun.xml.bind:jaxb-impl:2.2.11')
     runtime('org.springframework.boot:spring-boot-devtools')
-    runtime('com.h2database:h2')
-    runtime('mysql:mysql-connector-java')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
