--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     compile('javax.xml.bind:jaxb-api:2.2.11')
     compile('com.sun.xml.bind:jaxb-core:2.2.11')
     compile('com.sun.xml.bind:jaxb-impl:2.2.11')
+    compile('com.google.code.gson:gson')
     runtime('org.springframework.boot:spring-boot-devtools')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
